NetBSD Problem Report #55517
From www@netbsd.org Sun Jul 26 08:36:30 2020
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
by mollari.NetBSD.org (Postfix) with ESMTPS id 90BB71A9213
for <gnats-bugs@gnats.NetBSD.org>; Sun, 26 Jul 2020 08:36:30 +0000 (UTC)
Message-Id: <20200726083629.ACC0E1A9218@mollari.NetBSD.org>
Date: Sun, 26 Jul 2020 08:36:29 +0000 (UTC)
From: jnaman806@gmail.com
Reply-To: jnaman806@gmail.com
To: gnats-bugs@NetBSD.org
Subject: [libcurses] wresize() function incorrectly resizes the subwindows
X-Send-Pr-Version: www-1.0
>Number: 55517
>Category: lib
>Synopsis: [libcurses] wresize() function incorrectly resizes the subwindows
>Confidential: no
>Severity: serious
>Priority: medium
>Responsible: lib-bug-people
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sun Jul 26 08:40:00 +0000 2020
>Closed-Date: Tue Apr 26 22:46:33 +0000 2022
>Last-Modified: Tue Apr 26 22:46:33 +0000 2022
>Originator: Naman Jain
>Release: NetBSD 9.0
>Organization:
IIT Kanpur
>Environment:
NetBSD localhost 9.0 NetBSD 9.0 (GENERIC) #0: Fri Feb 14 00:06:28 UTC 2020 mkrepro@mkrepro.NetBSD.org:/usr/src/sys/arch/amd64/compile/GENERIC amd64
>Description:
wresize() function incorrectly resizes the subwindows. Resize the window such that its subwindow falls out of resized window, incorrectly resizes the subwindow.
>How-To-Repeat:
win1 = newwin(6,6,2,5)
win2 = subwin(win,5,5,3,6)
wresize(win1,4,4)
getmaxyx(win1, x1, y1) // Expected(y,x):(4,4) Got:(4,4)
getmaxyx(win2, x2, y2) // Expected(y,x):(3,3) Got:(3,1)
>Fix:
>Release-Note:
>Audit-Trail:
From: "Brett Lymn" <blymn@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/55517 CVS commit: src/lib/libcurses
Date: Tue, 26 Apr 2022 22:40:32 +0000
Module Name: src
Committed By: blymn
Date: Tue Apr 26 22:40:32 UTC 2022
Modified Files:
src/lib/libcurses: resize.c
Log Message:
Fix for PR 55517.
Actually us x values to recalculate subwin columns.
To generate a diff of this commit:
cvs rdiff -u -r1.34 -r1.35 src/lib/libcurses/resize.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->closed
State-Changed-By: blymn@NetBSD.org
State-Changed-When: Tue, 26 Apr 2022 22:46:33 +0000
State-Changed-Why:
Bug fixed.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.