Fix for PR 55517. Actually us x values to recalculate subwin columns.